...
        android:layout_height="match_parent"
        android:padding="@dimen/spacing"
        android:background="@color/lightblue"
        android:weightSum="11">

        <!-- Name Label -->
            <EditText android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="Full Name" />
        <!-- Name Label -->
        <EditText android:id="@+id/input_jobtitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="Profession" />
        <!-- Name Label -->
        <EditText android:id="@+id/input_companyname"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
...
            <!-- Address Label -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="10">
            <EditText android:id="@+id/input_address"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:inputType="textPostalAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
...
            android:layout_weight="1"
            android:hint="Website"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textWebEditText"/>
        <!--  Email Label -->
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="Email" />
        <!--work number-->
            <EditText android:id="@+id/input_telephone"
            android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
            android:inputType="phone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
            android:hint="Work Telephone" />
        <!-- mobile number -->
            <EditText android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="Mobile Number" />

        <!-- Password Label -->
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="Password"/>

        <!-- Password Confirm Label -->
            <EditText android:id="@+id/input_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="Confirm Password"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:background="@color/transparent"
            android:textColor="@color/white"
...
